--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>11/11/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/RunQwenImage.html"><span class="bold">Quick
+            Test :: Using Qwen-Image an Qwen-Image-Edit on a Local Machine</span></a></p>
+        </li>
+        <li>
           <p>11/09/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain.html"><span class="bold">Quick Primer
             on LangChain</span></a></p>
         </li>
@@ -53,10 +57,6 @@
         <li>
           <p>08/31/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/ContextManager.html"><span class="bold">Primer
             on Python Context Manager</span></a></p>
-        </li>
-        <li>
-          <p>08/23/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/RunQwenImage.html"><span class="bold">Quick
-            Test :: Text-to-Image using Qwen-Image on a Local Machine</span></a></p>
         </li>
         <li>
           <p>08/16/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on
