--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>11/15/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChainRecipes.html"><span class="bold">Common
+            LangChain Recipes</span></a></p>
+        </li>
+        <li>
           <p>11/11/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/RunQwenImage.html"><span class="bold">Quick
             Test :: Using Qwen-Image an Qwen-Image-Edit on a Local Machine</span></a></p>
         </li>
@@ -69,10 +73,6 @@
         <li>
           <p>07/12/2025 | <a target="_blank" href="https://polarsparc.github.io/Mathematics/CrossEntropy.html"><span class="bold">
             Understanding Cross Entropy</span></a></p>
-        </li>
-        <li>
-          <p>07/04/2025 | <a target="_blank" href="https://polarsparc.github.io/Ethereum/BesuPrivateCliqueDocker.html"><span class="bold">Hyperledger
-            Besu Private Network using Docker</span></a></p>
         </li>
       </ul>
     </div>
@@ -614,6 +614,14 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>11/15/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChainRecipes.html"><span class="bold">Common
+            LangChain Recipes</span></a></p>
+        </li>
+        <li>
+          <p>11/11/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/RunQwenImage.html"><span class="bold">Quick
+            Test :: Using Qwen-Image an Qwen-Image-Edit on a Local Machine</span></a></p>
+        </li>
+        <li>
           <p>11/09/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain.html"><span class="bold">Quick Primer
             on LangChain</span></a></p>
         </li>
@@ -622,16 +630,8 @@
             on Ollama</span></a></p>
         </li>
         <li>
-          <p>08/23/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/RunQwenImage.html"><span class="bold">Quick
-            Test :: Text-to-Image using Qwen-Image on a Local Machine</span></a></p>
-        </li>
-        <li>
           <p>06/28/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/Llama-cpp.html"><span class="bold">Quick Primer
             on Llama.cpp</span></a></p>
-        </li>
-        <li>
-          <p>06/15/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/LangChainRecipes.html"><span class="bold">Common
-            LangChain Recipes</span></a></p>
         </li>
         <li>
           <p>05/31/2025 | <a target="_blank" href="https://polarsparc.github.io/GenAI/OpenWebUI.html"><span class="bold">Quick Primer
