--- a/GenAI/LangChain.html
+++ b/GenAI/LangChain.html
@@ -198,7 +198,7 @@
 OLLAMA_CHAT_MODEL='phi4-mini:latest'
 OLLAMA_TOOLS_MODEL='granite4:micro'
 OLLAMA_BASE_URL='http://192.168.1.25:11434'
-CHROMA_DB_DIR='/home/bswamina/.chromadb'
+CHROMA_DB_DIR='/home/polarsparc/.chromadb'
 BOOKS_DATASET='./data/leadership_books.csv'
 MPG_SQLITE_URL='sqlite:///./data/auto_mpg.db'</pre>
       </div>
