--- a/Distributed/Spark-1.html
+++ b/Distributed/Spark-1.html
@@ -87,10 +87,9 @@
       <p>Installation and Setup</p>
     </div>
     <div id="para-div">
-      <p>The installation and setup will can on a <span class="bold">Ubuntu 24.04 LTS</span> based Linux desktop OR a <span class=
-        "bold">Apple Silicon</span> based Macbook Pro. Ensure that <span class="bold">Docker</span> is installed and setup on the
-        desktop (see <a href="http://polarsparc.github.io/Docker/Docker.html" target="_blank"> instructions</a>).</p>
-      <p>Also, ensure that the <span class="bold">Python 3.1x</span> programming language is installed.</p>
+      <p>The installation and setup will can on a <span class="bold">Ubuntu 24.04 LTS</span> based Linux desktop. Ensure that <span
+        class="bold">Docker</span> is installed and setup on the desktop (see <a href="http://polarsparc.github.io/Docker/Docker.html"
+        target="_blank"> instructions</a>).</p>
     </div>
     <div id="para-div">
       <p>Assuming the logged in user is <span class="bold">alice</span> (with home directory /home/alice), we will setup two required
