Spark another fix

--- a/Distributed/Spark-1.html
+++ b/Distributed/Spark-1.html
@@ -271,10 +271,10 @@ USER ${user}</pre>
  => [internal] load .dockerignore                                                                          0.0s
  => => transferring context: 2B                                                                            0.0s
  => [1/5] FROM docker.io/library/spark:4.0.1-scala2.13-java21-python3-ubuntu                               0.0s
- => CACHED [2/5] RUN groupadd -g 1000 polarsparc                                                           0.0s
- => CACHED [3/5] RUN useradd -u 1000 -g 1000 -M -s /sbin/nologin polarsparc                                0.0s
- => CACHED [4/5] RUN usermod -a -G spark polarsparc                                                        0.0s
- => CACHED [5/5] RUN usermod -a -G polarsparc spark                                                        0.0s
+ => CACHED [2/5] RUN groupadd -g 1000 alice                                                                0.0s
+ => CACHED [3/5] RUN useradd -u 1000 -g 1000 -M -s /sbin/nologin alice                                     0.0s
+ => CACHED [4/5] RUN usermod -a -G spark alice                                                             0.0s
+ => CACHED [5/5] RUN usermod -a -G alice spark                                                             0.0s
  => exporting to image                                                                                     0.0s
  => => exporting layers                                                                                    0.0s
  => => writing image sha256:5260f4fb2f96541b3261567cf202052b536512740cf86f92c86aa0fc78c7ee36               0.0s
