--- a/Distributed/Spark-1.html
+++ b/Distributed/Spark-1.html
@@ -349,7 +349,7 @@ SparkSession available as 'spark'.
     </div>
     <br/>
     <div id="para-div">
-      <p>Executing the above <span class="bold">Python</span> code generates the following would be the typical output:</p>
+      <p>Executing the above <span class="bold">Python</span> code generates the following typical output:</p>
     </div>
     <br/>
     <div id="out-div">
@@ -376,7 +376,7 @@ SparkSession available as 'spark'.
     </div>
     <br/>
     <div id="para-div">
-      <p>Executing the above <span class="bold">Python</span> code generates the following would be the typical output:</p>
+      <p>Executing the above <span class="bold">Python</span> code generates the following typical output:</p>
     </div>
     <br/>
     <div id="out-div">
@@ -409,7 +409,7 @@ only showing top 10 rows</pre>
     </div>
     <br/>
     <div id="para-div">
-      <p>Executing the above <span class="bold">Python</span> code generates the following would be the typical output:</p>
+      <p>Executing the above <span class="bold">Python</span> code generates the following typical output:</p>
     </div>
     <br/>
     <div id="out-div">
@@ -444,7 +444,7 @@ only showing top 10 rows</pre>
     </div>
     <br/>
     <div id="para-div">
-      <p>Executing the above <span class="bold">Python</span> code generates the following would be the typical output:</p>
+      <p>Executing the above <span class="bold">Python</span> code generates the following typical output:</p>
     </div>
     <br/>
     <div id="out-div">
@@ -506,7 +506,7 @@ only showing top 10 rows</pre>
     </div>
     <br/>
     <div id="para-div">
-      <p>Executing the above <span class="bold">Python</span> code generates the following would be the typical output:</p>
+      <p>Executing the above <span class="bold">Python</span> code generates the following typical output:</p>
     </div>
     <br/>
     <div id="out-div">
@@ -526,7 +526,7 @@ only showing top 10 rows</pre>
     </div>
     <br/>
     <div id="para-div">
-      <p>Executing the above <span class="bold">Python</span> code generates the following would be the typical output:</p>
+      <p>Executing the above <span class="bold">Python</span> code generates the following typical output:</p>
     </div>
     <br/>
     <div id="out-div">
