Fix Spark-1 notes

--- a/Distributed/Spark-1.html
+++ b/Distributed/Spark-1.html
@@ -162,7 +162,6 @@ export SPARK_NO_DAEMONIZE=1
 export SPARK_DRIVER_MEMORY=2g
 export SPARK_EXECUTOR_CORES=1
 export SPARK_EXECUTOR_MEMORY=1g
-export SPARK_USER=spark
 export SPARK_WORKER_CORES=2
 export SPARK_WORKER_MEMORY=2g</pre>
       </div>
@@ -183,7 +182,8 @@ export SPARK_WORKER_MEMORY=2g</pre>
       <p>Hands-on Spark using Python</p>
     </div>
     <div id="para-div">
-      <p>We will use the Python spark shell called <span class="hi-vanila">pyspark</span> for the hands-on demonstration.</p>
+      <p>We will use the Python spark shell called <span class="hi-vanila">pyspark</span> for the hands-on demonstration in the <span
+        class="hi-grey">local</span> mode, meaning Spark will run as thread(s) in the same VM as the pyspark shell.</p>
     </div>
     <div id="para-div">
       <p>Open a terminal window and execute the following command to launch the pyspark shell:</p>
@@ -193,6 +193,13 @@ export SPARK_WORKER_MEMORY=2g</pre>
       <p>docker run --rm --name pyspark-local -u $(id -u $USER):$(id -g $USER) -p 4040:4040 -v $HOME/spark/conf:/opt/spark/conf -v $HOME/spark/data:/opt/spark/data -it spark:4.0.1-scala2.13-java21-python3-ubuntu /opt/spark/bin/pyspark --master local[1]</p>
     </div>
     <br/>
+    <div id="para-div">
+      <p>Note that the option <span class="hi-vanila">local[1]</span> indicates that we want to execute Spark core and the pyspark
+        shell in the same VM without involving any cluster manager. This mode is quite useful during development and testing. The
+        number <span class="hi-grey">[K]</span> in <span class="hi-vanila">local[K]</span> indicates the number of system cores to
+        use and spawn that many worker threads. If we use <span class="hi-grey">[*]</span>, it indicates use all available system
+        cores.</p>
+    </div>
     <div id="para-div">
       <p>The following would be the typical trimmed output:</p>
     </div>
@@ -214,7 +221,7 @@ py4j.protocol.Py4JJavaError: An error occurred while calling None.org.apache.spa
     </div>
     <br/>
     <div id="para-div">
-      <p>Hmm !!! what went wrong here ???</p>
+      <p><span class="bold">Hmm</span> !!! Something went wrong here ???</p>
       <p>The spark user-id in the docker image is set to <span class="bold">spark</span>, while we passed in the host user-id of
         alice (using the <span class="hi-grey">-u</span> docker option). Since the user-id is not found in the docker image, we
         encounter this error !!!</p>
@@ -319,11 +326,6 @@ SparkSession available as 'spark'.
     <br/>
     <div id="para-div">
       <p><span class="bold">BINGO</span> - we were able to launch pyspark shell successfully this time !!!</p>
-    </div>
-    <div id="para-div">
-      <p>Note that the option <span class="hi-vanila">local[1]</span> indicates that we want to execute Spark core and the pyspark
-        shell in a <span class="bold">standalone local</span> mode without involving any cluster manager. This mode is quite useful 
-        during development and testing.</p>
     </div>
     <div id="para-div">
       <p>To create a pyspark dataframe from the penguins CSV file, execute the following code snippet:</p>
