Fix Spark-2 Notes

--- a/Distributed/Spark-2.html
+++ b/Distributed/Spark-2.html
@@ -625,6 +625,12 @@ SparkSession available as 'spark'.
       </table>
       <br/>
     </div>
+    <br/>
+    <div id="warn-div">
+      <h4>!!! ATTENTION !!!</h4>
+      <pre>Note that RDD is currently in <span class="underbold">MAINTENANCE</span> mode and the shift is towards the Dataframes !!!</pre>
+    </div>
+    <br/>
     <div id="para-div">
       <p>With this, we conclude the setup and demonstration of Apache Spark on a Linux desktop in the Standalone Cluster mode !!!</p>
     </div>
