Fix Spark-2 for Multi Node

--- a/Distributed/Spark-2.html
+++ b/Distributed/Spark-2.html
@@ -187,11 +187,37 @@
         class="bold">vader</span>.</p>
     </div>
     <div id="para-div">
+      <p>In the directory $HOME/spark/conf, edit the configuration file called <span class="hi-vanila">spark-defaults.conf</span> to
+        have the following contents:</p>
+    </div>
+    <br/>
+    <div id="src-outer-div-1">
+      <div class="src-cap-1">spark-defaults.conf</div>
+      <div class="gen-src-body">
+<pre># This is useful for setting default environmental settings.
+
+spark.log.level     INFO
+spark.master        spark://192.168.1.25:7077
+spark.driver.host   192.168.1.25</pre>
+      </div>
+    </div>
+    <br/>
+    <br/>
+    <div id="warn-div">
+      <h4>!!! ATTENTION !!!</h4>
+      <pre>The parameter <span class="underbold">spark.driver.host</span> is very important if we want to deploy the Master or Worker(s) on different hosts !!!</pre>
+    </div>
+    <br/>
+    <div id="para-div">
+      <p>For the hands-on demonstration, we will be deploying a Standalone cluster with one Master and one Worker, both running on
+        the host <span class="bold">192.168.1.25</span>.</p>
+    </div>
+    <div id="para-div">
       <p>To start the Spark Master node running the Standalone Cluster Nanager, execute the following command in a terminal window:</p>
     </div>
     <br/>
     <div id="cmd-div">
-      <p>$ docker run --rm --name spark-master --network host -u $(id -u $USER):$(id -g $USER) -p 192.168.1.25:7077:7077 -p 192.168.1.25:8080:8080 -v $HOME/spark/conf:/opt/spark/conf -v $HOME/spark/logs:/opt/spark/logs -it ps-spark:v4.0.1 /opt/spark/sbin/start-master.sh</p>
+      <p>$ docker run --rm --name spark-master --network host -u $(id -u $USER):$(id -g $USER) -v $HOME/spark/conf:/opt/spark/conf -v $HOME/spark/logs:/opt/spark/logs -it ps-spark:v4.0.1 /opt/spark/sbin/start-master.sh</p>
     </div>
     <br/>
     <div id="para-div">
@@ -200,8 +226,7 @@
     <br/>
     <div id="out-div">
       <h4>Output.1</h4>
-      <pre>WARNING: Published ports are discarded when using host network mode
-starting org.apache.spark.deploy.master.Master, logging to /opt/spark/logs/spark-MySparkCluster-org.apache.spark.deploy.master.Master-1-vader.out
+      <pre>starting org.apache.spark.deploy.master.Master, logging to /opt/spark/logs/spark-MySparkCluster-org.apache.spark.deploy.master.Master-1-vader.out
 Spark Command: /opt/java/openjdk/bin/java -cp /opt/spark/conf/:/opt/spark/jars/slf4j-api-2.0.16.jar:/opt/spark/jars/* -Xmx1g -XX:+IgnoreUnrecognizedVMOptions --add-modules=jdk.incubator.vector --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED -Djdk.reflect.useDirectMethodHandle=false -Dio.netty.tryReflectionSetAccessible=true org.apache.spark.deploy.master.Master --host vader --port 7077 --webui-port 8080
 ========================================
 WARNING: Using incubator modules: jdk.incubator.vector
@@ -243,7 +268,7 @@ Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties
     </div>
     <br/>
     <div id="cmd-div">
-      <p>$ docker run --rm --name spark-worker --network host -u $(id -u $USER):$(id -g $USER) -p 192.168.1.25:8081:8081 -v $HOME/spark/conf:/opt/spark/conf -v $HOME/spark/data:/opt/spark/data -v $HOME/spark/logs:/opt/spark/logs -v $HOME/spark/work-dir:/opt/spark/work-dir -it ps-spark:v4.0.1 /opt/spark/sbin/start-worker.sh spark://192.168.1.25:7077</p>
+      <p>$ docker run --rm --name spark-worker --network host -u $(id -u $USER):$(id -g $USER) -v $HOME/spark/conf:/opt/spark/conf -v $HOME/spark/data:/opt/spark/data -v $HOME/spark/logs:/opt/spark/logs -v $HOME/spark/work-dir:/opt/spark/work-dir -it ps-spark:v4.0.1 /opt/spark/sbin/start-worker.sh spark://192.168.1.25:7077</p>
     </div>
     <br/>
     <div id="para-div">
@@ -252,8 +277,7 @@ Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties
     <br/>
     <div id="out-div">
       <h4>Output.2</h4>
-      <pre>WARNING: Published ports are discarded when using host network mode
-starting org.apache.spark.deploy.worker.Worker, logging to /opt/spark/logs/spark-MySparkCluster-org.apache.spark.deploy.worker.Worker-1-vader.out
+      <pre>starting org.apache.spark.deploy.worker.Worker, logging to /opt/spark/logs/spark-MySparkCluster-org.apache.spark.deploy.worker.Worker-1-vader.out
 Spark Command: /opt/java/openjdk/bin/java -cp /opt/spark/conf/:/opt/spark/jars/slf4j-api-2.0.16.jar:/opt/spark/jars/* -Xmx1g -XX:+IgnoreUnrecognizedVMOptions --add-modules=jdk.incubator.vector --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED -Djdk.reflect.useDirectMethodHandle=false -Dio.netty.tryReflectionSetAccessible=true org.apache.spark.deploy.worker.Worker --webui-port 8081 spark://192.168.1.25:7077
 ========================================
 WARNING: Using incubator modules: jdk.incubator.vector
@@ -317,7 +341,7 @@ Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties
     </div>
     <br/>
     <div id="cmd-div">
-      <p>$ docker run --rm --name pyspark --network host -u $(id -u $USER):$(id -g $USER) -p 192.168.1.25:4040:4040 -v $HOME/spark/conf:/opt/spark/conf -v $HOME/spark/data:/opt/spark/data -v $HOME/spark/work-dir:/opt/spark/work-dir -it ps-spark:v4.0.1 /opt/spark/bin/pyspark --master spark://192.168.1.25:7077 --deploy-mode client</p>
+      <p>$ docker run --rm --name pyspark --network host -u $(id -u $USER):$(id -g $USER) -v $HOME/spark/conf:/opt/spark/conf -v $HOME/spark/data:/opt/spark/data -v $HOME/spark/work-dir:/opt/spark/work-dir -it ps-spark:v4.0.1 /opt/spark/bin/pyspark --master spark://192.168.1.25:7077 --deploy-mode client</p>
     </div>
     <br/>
     <div id="para-div">
@@ -326,8 +350,7 @@ Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties
     <br/>
     <div id="out-div">
       <h4>Output.3</h4>
-      <pre>WARNING: Published ports are discarded when using host network mode
-Python 3.10.12 (main, Aug 15 2025, 14:32:43) [GCC 11.4.0] on linux
+      <pre>Python 3.10.12 (main, Aug 15 2025, 14:32:43) [GCC 11.4.0] on linux
 Type "help", "copyright", "credits" or "license" for more information.
 WARNING: Using incubator modules: jdk.incubator.vector
 Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties
