--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p>11/30/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-3.html"><span class="bold">Apache
+            Spark 4.x Quick Notes :: Part - 3</span></a></p>
+        </li>
+        <li>
           <p>11/28/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-2.html"><span class="bold">Apache
             Spark 4.x Quick Notes :: Part - 2</span></a></p>
         </li>
@@ -69,10 +73,6 @@
         <li>
           <p>08/31/2025 | <a target="_blank" href="https://polarsparc.github.io/Python/ContextManager.html"><span class="bold">Primer
             on Python Context Manager</span></a></p>
-        </li>
-        <li>
-          <p>08/16/2025 | <a target="_blank" href="https://polarsparc.github.io/MCP/MCP.html"><span class="bold">Quick Primer on
-            Model Context Protocol (MCP)</span></a></p>
         </li>
       </ul>
     </div>
@@ -429,6 +429,10 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p>11/30/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-3.html"><span class="bold">Apache
+            Spark 4.x Quick Notes :: Part - 3</span></a></p>
+        </li>
         <li>
           <p>11/28/2025 | <a target="_blank" href="https://polarsparc.github.io/Distributed/Spark-2.html"><span class="bold">Apache
             Spark 4.x Quick Notes :: Part - 2</span></a></p>
